NXP-30832: cleanup / format